# baby-stats

./: .env.template  WARP.md  compose.yaml  env.example
api/: README.md  env.example  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 40323c678db1_milk_bottle_model.py
api/src/: config.py
api/src/models/: __init__.py  bottle.py
backend/: .env.template  .gitignore  package.json  pyproject.toml  tsconfig.json
backend/django_app_baby_stats/: admin.py  apps.py  serializers.py  views.py
backend/django_app_baby_stats/migrations/: 0001_initial.py
backend/django_project/: settings.py  urls.py
backend/prisma/: schema.prisma
backend/prisma/migrations/20251007135541_auth/: migration.sql
backend/src/: auth.ts  index.ts
backend/src/baby_stats/: apps.py  models.py
backend/src/baby_stats/migrations/: 0001_initial.py
backend/src/backend/: config.py
backend/src/mysite/: settings.py
frontend/: .gitignore  app.json  package-lock.json  package.json
frontend/app/(tabs)/: _layout.tsx  index.tsx  stats.tsx
frontend/app/(tabs)/(history)/: index.tsx
frontend/app/(tabs)/(history,stats)/: _layout.tsx  form.tsx
frontend/app/(tabs)/(stats)/: stats.tsx
