[project]
name = "api"
version = "0.1.0"
description = "API for baby stats"
readme = "README.md"
authors = [
    { name = "Quentin Vanderlinden", email = "quentin.vanderlinden@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
api = "api:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
